1999-08-22  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    An odd-ball case of lacking RSET is PIPELINING mode when
	    none of the recipients were successfull..

1999-08-21  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/fqdnalias.cf:
	    One last missing usage instance of "runas .. cat ..".
	
	* scheduler/msgerror.c:
	    Printout the  MESSAGE/DELIVERY-STATUS  report to the end of
	    the initial text report - because so many (M$) email clients
	    are uterly unable to display them...

1999-08-18  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* configure.in:
	    For Solaris 2.6 (and Solaris 7 ?) autodetect  -lxnet  for
	    socket related functions.

	* smtpserver/zpwmatch.c, utils/listexpand.c:
	    Some cleanup from result of using SUN-CC 4.2 at Solaris 2.6.

1999-08-17  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* README.TCP-WRAPPER:
	    New file.

	* lib/rfc822scan.c:
	    Reorganized the code a bit - now the fast path is
	    straighter code with less odd tests.

	* transports/mailbox/mailbox.c:
	    getpwnam() failure report fix - should not need, but..

	* transports/smtp/smtp.c:
	    Solaris 2.5.1 doing  getsockname()  is doing blocking
	    streams thing even on non-blocking socket :-/ Results
	    are not as nice as with e.g. BSD based systems where
	    same call doesn't block (no need!)  Also some errno
	    saving around.

1999-08-16  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* proto/cf/aliases.cf:
	    When the   ssift  (and tsift)  were changed *not* to
	    strip away quotes, buggeroo... we need *one* place where
	    quotes are stripped -- that is: explicitely..

	* lib/rfc822scan.c:
	    _unfold() had problems at detecting the termination condition.

	* router/rfc822hdrs.c:
	    One fine-tuning of "Received:" header generation; leaves
	    off one space character when no 'from' clause is present.

1999-08-15  Matti Aarnio  <mea@mea.tmt.tele.fi>

	* transports/smtp/smtp.c:
	    Detect better, when the STDIO fwrite() and friends